os-prober (0.03) UNRELEASED; urgency=low

  * Joshua Kwan
    - use underscores for spaces, to avoid parsing ambiguity

 -- Joshua Kwan <joshk@triplehelix.org>  Sun,  4 Apr 2004 19:18:23 -0700

os-prober (0.02) unstable; urgency=low

  * Include init dir in the udeb.

 -- Joey Hess <joeyh@debian.org>  Sun,  4 Apr 2004 00:43:12 -0500

os-prober (0.01) unstable; urgency=low

  * Initial Release.

 -- Joey Hess <joeyh@debian.org>  Sat,  3 Apr 2004 23:45:29 -0500