@@ -1,0 +1,5 @@
+common/*                usr/share/os-prober
+common.sh               usr/share/os-prober
+init/*                  usr/share/os-prober/init
+mounted/common/*        usr/share/os-prober/mounted
+os-prober               bin
