@@ -1,9 +1,11 @@
 os-prober (0.03) UNRELEASED; urgency=low
 
   * Joshua Kwan
-    - use underscores for spaces, to avoid parsing ambiguity
+    - Allow for unique short names via functions in new common.sh library.
+    - Revamp all the dh_install stuff.
+    - Use /var/lib/os-prober as our sandbox.
 
- -- Joshua Kwan <joshk@triplehelix.org>  Sun,  4 Apr 2004 19:18:23 -0700
+ -- Joshua Kwan <joshk@triplehelix.org>  Tue,  6 Apr 2004 08:41:13 -0700
 
 os-prober (0.02) unstable; urgency=low
 
